--- a/supplier-status-portal/client/package.json
+++ b/supplier-status-portal/client/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "antd": "^5.23.3",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "xlsx": "^0.18.5"
