--- a/supplier-status-portal/client/package.json
+++ b/supplier-status-portal/client/package.json
@@ -6,6 +6,7 @@
     "antd": "^5.23.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
